[package]
name = "bintest"
version = "1.0.1"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2018"
description = "Testing the executables build by a bin crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/bintest.git"
keywords = ["testing", "cargo"]

[dependencies]
cargo_metadata = "0.13"

[badges]
maintenance = { status = "actively-developed" }
